--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="Index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
