--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         {
             "imports": {
                 "three": "https://threejs.org/build/three.module.js",
-                "three/addons/": "https://threejs.org/examples/jsm/controls/OrbitControls.js"
+                "three/examples/jsm/controls/OrbitControls.js": "https://threejs.org/examples/jsm/controls/OrbitControls.js"
             }
         }</script>
     <script src="./index.js" type="module"></script>
