--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Galaxy</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <script type="importmap">
-        {
-            "imports": {
-                "three": "https://threejs.org/build/three.module.js",
-                "three/examples/jsm/controls/OrbitControls.js": "https://threejs.org/examples/jsm/controls/OrbitControls.js"
-            }
-        }</script>
-    <script src="./index.js" type="module"></script>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Our Galaxy</title>
+    </head>
+    <body>
+        <script src="./src/index.js" type="module"></script>
+    </body>
+    
 </html>
