--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Our Galaxy</title>
     </head>
     <body>
-        <script src="./src/index.js" type="module"></script>
+        <script src="./dist/main.js" type="module"></script>
     </body>
     
 </html>
