fixed it all good lord

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Our Galaxy</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <script src="./dist/main.js" type="module"></script>
